# svgo-rs

./: .gitignore  Cargo.toml  README.md  README.zh.md  biome.json  browser.js  index.d.ts  index.js  package.json  rustfmt.toml  svgo-rs.wasi-browser.js  svgo-rs.wasi.cjs
.github/workflows/: CI.yml
.kiro/steering/: product.md  structure.md  tech.md
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: error.rs  lib.rs  optimizer.rs  parser.rs  plugin_pipeline.rs  process_xml.rs  xml_ast.rs
src/dom/: mod.rs
src/plugins/: _collections.rs  class_adder.rs  class_style.rs  cleanup_attrs.rs  common_attributes.rs  convert_colors.rs  merge_classes.rs  mod.rs  move_elems_attrs_to_group.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_empty_text.rs  remove_metadata.rs  remove_title.rs  remove_xml_proc_inst.rs  uppercase_id.rs
src/utils/: extract_css_selectors.rs  mod.rs
