[package]
authors    = ["Jacob <jacob.lcs@qq.com>"]
edition    = "2021"
license    = "MIT"
name       = "svgo-rs"
repository = "https://github.com/oxidized-world/svgo-rs"
version    = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo        = { version = "3.17.0", features = ["collections"] }
derive_builder = "0.20.2"
env_logger     = "0.11.8"
lazy_static    = "1.4.0"
log            = "0.4.27"
napi           = { version = "2.16.17", features = ["napi6"] }
napi-derive    = "2.16.13"
quick-xml      = "0.37.3"
regex          = "1.11.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
