[package]
authors    = ["Jacob <jacob.lcs@qq.com>"]
edition    = "2021"
license    = "MIT"
name       = "svgo-rs"
repository = "https://github.com/oxidized-world/svgo-rs"
version    = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo     = { version = "3.17.0", features = ["collections"] }
env_logger  = "0.11.8"
lazy_static = "1.4.0"
log         = "0.4.27"
napi        = "3.0.0"
napi-derive = "3.0.0"
quick-xml   = "0.37.3"
regex       = "1.11.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
